client/stylesheets/main.less
@import 'variables.less';

.main {
  padding: @job-section-padding;
  max-height: none;
  height: calc(~'100% - 50px');
  background-color: #f5f5f5;
  overflow-y: auto;
  .job {
    width: calc(~'100% - 5px');
    padding-left: 5px;
    .job-header {
      padding-bottom: @job-section-padding;
      font-size: @header-font-size;
      .job-number, .shipper, .consignee {
        font-weight: bold;
      }
      .job-number {
        position: absolute;
        left: 10px;
      }
      .job-party {
        padding: 0;
      }
      textarea {
        width: 100%;
        height: 32px;
      }
    }
    .job-movement {
      padding-bottom: @job-section-padding;
      .movement-icon {
        font-size: 32px;
      }
      textarea {
        height: 24px;
      }
    }
    .job-cargo {
      padding-bottom: @job-section-padding;
      .icon-container {
        height: 22px;
        width: 22px;
        text-align: center;
        color: #777;
        font-size: 18px;
        padding-left: 15px;
      }
      .icon-container:hover {
        color: #333;
        cursor: pointer;
      }
      .cargo-container {
        border-radius: 5px;
        background-color: #ddd;
        padding-top: 3px;
        padding-bottom: 3px;
        margin-bottom: 5px;
        min-height: 28px;
        .container-header {
          padding-top: 3px;
          margin-left: 0;
          margin-right: 0;
          .num-packages-column, .package-type-column {
            padding: 0;
          }
          textarea {
            height: 24px;
            width: 100%;
            text-align: left;
          }
          .container-num-packages, .container-gross-weight, .container-volume {
            text-align: right;
          }
        }
        .cargo-package {
          border-radius: 5px;
          background-color: #c9c9c9;
          margin-left: 10px;
          margin-right: 10px;
          padding-top: 3px;
          .row {
            padding-top: 3px;
            padding-bottom: 3px;
            margin-bottom: 6px;
            margin-left: -10px;
            margin-right: -10px;
            .num-packages-column, .package-type-column {
              padding: 0;
            }
            textarea {
              height: 24px;
              width: 100%;
              text-align: left;
            }
            .package-num-packages, .package-gross-weight, .package-volume {
              text-align: right;
            }
          }
        }
      }
    }
  }
}

